[project]
name = "happyrobotfde"
version = "0.1.0"
description = "FDE Technical Challenge: Inbound Carrier Sales"
authors = [
    {name = "Rubio",email = "100428611@alumnos.uc3m.es"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "boto3 (>=1.40.10,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pulumi (>=3.189.0,<4.0.0)",
    "pulumi-aws (>=7.4.0,<8.0.0)",
    "pulumi-docker (>=4.8.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src", from = "." }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.0"
pytest-html = "^4.1.1"
pytest-benchmark = "^5.1.0"
coverage = "^7.6.9"
tenacity = "^9.1.2"
asyncpg = "^0.30.0"
ruff = "^0.11.4"
psycopg2-binary = "^2.9.10"
aiosqlite = "^0.21.0"
factory-boy = "^3.3.1"
faker = "^33.1.0"
httpx = "^0.28.1"
pytest-env = "^1.1.5"
moto = {extras = ["s3"], version = "^5.1.5"}
fakeredis = "^2.29.0"
aws-lambda-powertools = "^3.17.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
